# odbc-ini-gen

./: .dockerignore  .docopt  CMakeLists.txt  Dockerfile  Dockerfile.debian  README.md  vcpkg.json
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
odbc_ini_gen/: CMakeLists.txt  main.c  odbc_ini_gen_cli.c  odbc_ini_gen_cli.h
odbc_ini_gen/common/: odbc_ini_types.h
odbc_ini_gen/odbc_infer/: CMakeLists.txt  odbc_infer.c  odbc_infer.h
odbc_ini_gen/odbc_ini_fs/: CMakeLists.txt  odbc_ini_fs.c  odbc_ini_fs.h
odbc_ini_gen/odbc_ini_str/: CMakeLists.txt  odbc_ini_str.c  odbc_ini_str.h
